@@ -1,5 +1,6 @@
 package com.pos.spotify.service;
 
+import com.pos.spotify.entity.Artist;
 import com.pos.spotify.entity.ArtistPortfolio;
 import com.pos.spotify.entity.ArtistPortfolioAssociationId;
 import com.pos.spotify.entity.Record;
@@ -25,11 +26,24 @@ public class ArtistPortfolioServiceImpl implements ArtistPortfolioService {
     }
 
     @Override
-    public List<Record> getById(String uuid) {
+    public List<Record> getRecordsByArtist(String artist_id) {
         List<ArtistPortfolio> portfolioList = getAll();
-        return portfolioList.stream().filter(c-> c.getArtist().getUuid().equals(uuid)).map(ArtistPortfolio::getRecord).collect(Collectors.toList());
+        return portfolioList.stream().filter(
+                c-> c.getArtist().
+                        getUuid()
+                        .equals(artist_id))
+                .map(ArtistPortfolio::getRecord)
+                .toList();
     }
 
+    @Override
+    public Artist getArtistByRecord(int record_id){
+        List<ArtistPortfolio> portfolioList = getAll();
+        return portfolioList.stream().filter(
+                c -> c.getRecord().getId() == record_id)
+                .map(ArtistPortfolio::getArtist)
+                .toList().get(0);
+    }
     @Override
     public void delete(ArtistPortfolioAssociationId id) {
         portfolioRepository.deleteById(id);
